--- a/src/nexBit_frontend/src/index.css
+++ b/src/nexBit_frontend/src/index.css
@@ -1,3 +1,9 @@
+/* src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   font-family: sans-serif;
   font-size: 1.5rem;
